--- a/devopsrepo/numbers-proj/Jenkinsfile
+++ b/devopsrepo/numbers-proj/Jenkinsfile
@@ -9,12 +9,12 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                sh 'mvn clean compile package -f ./devopsrepo/numbers-proj/pom.xml'
+                bat 'mvn clean compile package -f ./devopsrepo/numbers-proj/pom.xml'
             }
         }
         stage('Test') {
             steps {
-                sh 'mvn test -f ./devopsrepo/numbers-proj/pom.xml'
+                bat 'mvn test -f ./devopsrepo/numbers-proj/pom.xml'
             }
             post {
                 always {
